# alloy

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Coverage.cmake  Deploy.cmake  README.md  Test.cmake  alloy.hpp
.github/workflows/: ci.yml
cmake/: CompileFlags.cmake  Deploy.cmake  Metal.cmake  TestTree.cmake
example/: CMakeLists.txt
example/src/: overview.cpp
include/: alloy.hpp
include/alloy/: append.hpp  args.hpp  at.hpp  capture.hpp  config.hpp  constant.hpp  defer.hpp  detail.hpp  external.hpp  filter.hpp  forward.hpp  join.hpp  lambda.hpp  model.hpp  number.hpp  operators.hpp  prepend.hpp  sink.hpp  source.hpp  stream.hpp  tuple.hpp  unpack.hpp  value.hpp
include/alloy/config/: version.hpp
include/alloy/detail/: args.hpp  dispatcher.hpp  fold.hpp  functional.hpp  invocable.hpp  invoke.hpp  lookup.hpp  object.hpp  pick.hpp  picker.hpp  return.hpp  traits.hpp
include/alloy/filter/: append.hpp  at.hpp  copy_if.hpp  drop.hpp  model.hpp  prepend.hpp  reverse.hpp
include/alloy/lambda/: curry.hpp  invoke.hpp
include/alloy/number/: and.hpp  not.hpp  number.hpp  numbers.hpp  or.hpp
include/alloy/sink/: model.hpp
include/alloy/source/: capture.hpp  forward.hpp  join.hpp  model.hpp  unpack.hpp
include/alloy/stream/: append.hpp  at.hpp  copy_if.hpp  drop.hpp  filter.hpp  foldl.hpp  foldr.hpp  model.hpp  prepend.hpp  reverse.hpp  take.hpp  transform.hpp
include/alloy/tuple/: accumulate.hpp  apply.hpp  at.hpp  indices.hpp  iota.hpp  operators.hpp  reverse.hpp  rotate.hpp  size.hpp  transform.hpp  tuple.hpp
include/alloy/value/: equal.hpp  fold.hpp
test/: CMakeLists.txt
test/deployment/: CMakeLists.txt
test/formatting/: CMakeLists.txt
test/header/: CMakeLists.txt
test/linking/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/include/: test.hpp
test/unit/src/: alloy.cpp  sorcery.cpp
test/unit/src/alloy/config/: version.cpp
test/unit/src/alloy/filter/: append.cpp  at.cpp  copy_if.cpp  drop.cpp  model.cpp  prepend.cpp
test/unit/src/alloy/sink/: model.cpp
test/unit/src/alloy/source/: capture.cpp  forward.cpp  join.cpp  model.cpp  unpack.cpp
test/unit/src/alloy/stream/: append.cpp  at.cpp  drop.cpp  filter.cpp  foldl.cpp  foldr.cpp  model.cpp  prepend.cpp  reverse.cpp  take.cpp  transform.cpp
test/unit/src/alloy/tuple/: reverse.cpp
